added maps to CEP search
